Narrow the nullable output-schema rule to what the records actually do
Making every Java reference nullable fixed the real defect - a strict
client discards a whole response whose payload violates the advertised
outputSchema, so a bare type for an absent optional field made those
tools return nothing at all - but it overshot on one type.

A list is never null. Convention 7 has every response record report an
empty result as an empty list and a count, never null and never a
sentence. Advertising an array as nullable contradicted a guarantee
callers already rely on, and broke the 40 tests that assert it.

So: primitives bare, arrays bare, everything else nullable. Enums list
null among their constants too, because a validator checks "enum"
independently of "type" and would otherwise reject exactly the value
the type permits.

Seven assertions still encoded the old bare-type contract for fields
that are genuinely nullable. Six of them only care which type a field
carries, and two of those duplicated the same private helper, so they
now share SchemaTypes.carriedBy. Where the null itself is the point -
an absent modification stamp, a missing Javadoc body - the test still
asserts the full declared type.

mvn clean verify: 502 tests, 0 failures, 0 errors, 8 skipped.

Getting that run to start took two prerequisites that no error message
names - Maven 3.9+, and a registered JavaSE-21 toolchain for the pom's
<useJDK>BREE</useJDK> - so both are now written down in CLAUDE.md.
Tycho 5 also drops a .tycho-consumer-pom.xml beside every module during
a build; that is generated output, so it is ignored.